css/printStyle.css
* {
	background-color: white;
	font-family: 'Times New Roman', Times, serif;
	font-size: medium;
}

body {
	display: flex;
	flex-direction: column;
	min-height: fit-content;
	background-color: white;
}
#breadcrumb {
	margin-inline: auto;
}
.secondary,
.destructive {
	background-color: white;
	border: 1px solid black;
}
/* HEADER */

.header-container.active {
	background-color: white;
}
/* FOOTER */
footer,
.book-table > :nth-child(even) {
	background-color: white;
}

#contenuto,
#piu-scambiati {
	border-bottom: 2px solid var(--background-200);
}

nav,
#breadcrumb,
#contenuto,
#piu-scambiati,
.message-box,
.dialog-window {
	background-color: white;
}
/* INDEX */
#landing a {
	text-decoration: underline;
	color: var(--link-color);
}
#landing > div > h1 {
	font-size: 3em;
}
#landing > div > p {
	font-size: 1.2em;
}

#piu-scambiati {
	margin-top: 4em;
	margin-bottom: 4em;
}
#citazione {
	margin-top: 4em;
	margin-bottom: 4em;
}

/* LOGIN */
input#email,
input#password {
	border: 1px solid black;
}
.login {
	margin-bottom: 6em;
}

/* REGISTRATI */
.signin {
	max-width: 25em;
	gap: 0;
	padding: 0.5em 1em;
	margin-bottom: 5em;
	margin-top: 0;
}
input#nome.form-input,
input#cognome,
select#provincia.form-input,
select#comune.form-input,
input#username,
input#conferma_password {
	border: 1px solid black;
}

/* ESPLORA */

.sezione-stretta {
	padding: 0.5em;
	margin-bottom: 0;
}

#piu-scambiati {
	padding: 0.5em;
	gap: 0.5em;
}
.libro > img {
	border-radius: 0.5em;
	max-width: 6em;
}
.button-layout.call-to-action {
	padding: 1em;
}
.scroll-to-top {
	display: none;
}

.titolo-libro {
	font-weight: small;
	margin-top: 1em;
	margin-bottom: 0em;
}

/* COME FUNZIONA */
#come-funziona > div > div > img {
	max-width: 10em;
	border-radius: 5em;
}
#come-funziona {
	background: var(--light-gray);
}
#come-funziona > div > div > p {
	font-size: 1em;
}

#perche-farlo > div {
	margin-top: 0;
	padding: 1em;
}

#citazione {
	padding: 1em;
}

#landing img {
	max-width: 20em;
}

a.button-layout {
	border: 1px solid black;
	background-color: white;
}
main,
.scambio,
.danger {
	background-color: white;
}
.scambio {
	border: 1px var(--background-200) solid;
}
.danger {
	border: 1px solid var(--accent-600);
	color: black;
}

